# agenticmemory

./: .dockerignore  .gitignore  AGENTS_GUIDE.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  PERFORMANCE.md  README.md  SCALE_BENCHMARKS.md  SESSION_SUMMARY.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
benches/: agent_mem_db_bench.rs
capi/: Cargo.toml
capi/include/: agent_mem_db.h
capi/src/: lib.rs
deploy/: README.md
deploy/helm/agent-mem-server/: Chart.yaml  values.yaml
deploy/helm/agent-mem-server/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
deploy/terraform/: main.tf
docs/: COMMERCIAL_ROADMAP.md  COMPARISON.md  MEMORY_BENCHMARKS.md  ONBOARDING.md  OSS_COMMERCIAL.md  README.md  VERIFICATION.md  agent_integration.md  architecture.md  case_study_preference_qa.md  design_async_apis.md  design_combine_similarity_constraints.md  design_config_driven_eval.md  design_go_bindings.md  design_hnsw_checkpoint.md  design_horizontal_scaling.md  design_hosted_memory.md  design_incremental_indexing.md  design_langchain_integration.md  design_langgraph_memory.md  design_notes_agent_integration.md  design_notes_eval.md  design_on_disk_storage.md  design_pluggable_index.md  design_pq_ivf.md  design_retention_pruning.md  design_rich_metadata.md  design_roadmap.md  design_typescript_bindings.md  eval_analysis_report.md  eval_case_studies.md  eval_results.md  overview.md  research.md  tuning.md
docs/integrations/: README.md  langchain.md  langgraph.md
examples/: agent_sim.rs  async_example.rs  basic.rs  disk_checkpoint.rs
go/: README.md  agentmemdb.go  example_test.go  go.mod
go/cmd/example/: main.go
integrations/langchain/: README.md  example.py  pyproject.toml
integrations/langchain/agent_mem_db_langchain/: __init__.py  vectorstore.py
integrations/langchain/agent_mem_db_langchain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
integrations/langchain/tests/: test_vectorstore.py
integrations/langgraph/: README.md  agent_example.py  example.py  pyproject.toml
integrations/langgraph/agent_mem_db_langgraph/: __init__.py  store.py
integrations/langgraph/agent_mem_db_langgraph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
integrations/langgraph/tests/: __init__.py  test_store.py
node/: Cargo.toml  README.md  agent_mem_db.node  example.js  index.d.ts  index.js  package-lock.json  package.json  test.js
node/src/: lib.rs
python/: Cargo.toml  README.md  pyproject.toml
python/agent_mem_db_py/: __init__.py  async_api.py
python/examples/: basic.py  langgraph_agent.py  manual_bench.py  synthetic_episodes.py
python/examples/agents/: __init__.py  agent_mem_db_agent.py  base.py  eval_config.json  eval_config.yaml  eval_config_minimal.json  naive_memory.py  no_memory.py  run_eval.py
python/examples/apps/: README.md  __init__.py  coding_assistant.py  personal_assistant.py
python/notebooks/: eval_analysis.ipynb
python/scripts/: analyze_eval.py
python/src/: lib.rs
python/tests/: test_basic.py
server/: Cargo.toml
server/src/: main.rs
src/: async_api.rs  disk.rs  index.rs  lib.rs
tests/: basic.rs  concurrent_stress.rs  disk.rs  fuzz_episode.rs  persist.rs  proptest_persist.rs
