[workspace]
members = ["server", "node", "python", "capi"]

[package]
name = "agent_mem_db"
version = "0.1.0"
edition = "2021"
description = "In-memory agent memory DB with HNSW vector search for agent episodes"
license = "MIT"
repository = "https://github.com/sathvikkurap/agenticmemory"
homepage = "https://github.com/sathvikkurap/agenticmemory"
documentation = "https://docs.rs/agent_mem_db"
keywords = ["agent", "memory", "hnsw", "vector-search", "embeddings"]
categories = ["data-structures", "science"]

[features]
default = []
async = ["tokio"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
thiserror = "1.0"
hnswx = "0.2.5"
anyhow = "1.0"
bincode = "1.3"
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "sync", "macros"] }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
proptest = "1.5"

[[example]]
name = "async_example"
required-features = ["async"]

[[bench]]
name = "agent_mem_db_bench"
harness = false
