[package]
name = "agent_mem_db_node"
version = "0.1.0"
edition = "2021"
description = "Node.js bindings for agent_mem_db — episodic memory with HNSW vector search"

[lib]
crate-type = ["cdylib"]

[dependencies]
agent_mem_db = { path = ".." }
napi = { version = "3", features = ["serde-json"] }
napi-derive = "3"
serde_json = "1.0"

[build-dependencies]
napi-build = "2"
