[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "agent_mem_db_py"
version = "0.1.0"
description = "Python bindings for agent_mem_db — in-memory agent memory DB with HNSW vector search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["agent", "memory", "hnsw", "vector-search", "embeddings"]

[project.urls]
Homepage = "https://github.com/sathvikkurap/agenticmemory"
Repository = "https://github.com/sathvikkurap/agenticmemory"
Documentation = "https://github.com/sathvikkurap/agenticmemory#readme"

[tool.maturin]
features = ["pyo3/extension-module"]
