[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_mem_db_langchain"
version = "0.1.0"
description = "LangChain VectorStore backend using AgentMemDB"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "agent_mem_db_py>=0.1.0",
    "langchain-core>=0.2",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_mem_db_langchain*"]
